--- a/BoardingHouse/Views/_LayouUserPage.cshtml
+++ b/BoardingHouse/Views/_LayouUserPage.cshtml
@@ -23,8 +23,8 @@
     <script src="~/scripts/userProfileQuery.js"></script>
     <script src="~/scripts/bootstrap.js"></script>
     <script src="~/scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
-
-  
+    <script src="~/scripts/ng-file-upload.js"></script>
+    <script src="~/scripts/ng-file-upload-shim.js"></script>
 
     <script type="text/javascript" src="@Href("/app/modules/user.module.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/userProfile.controller.js")"></script>
