--- a/BoardingHouse/Views/_LayouUserPage.cshtml
+++ b/BoardingHouse/Views/_LayouUserPage.cshtml
@@ -11,7 +11,7 @@
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/css/styles.css" rel="stylesheet" />
 </head>
-<body style="background-color:#D9DEE4">
+<body style="background-image:url('/image/background.jpg')">
     <div ng-app="userModule">
         <div>@RenderBody()</div>
     </div>
