--- a/BoardingHouse/Views/_LayoutAdminPage.cshtml
+++ b/BoardingHouse/Views/_LayoutAdminPage.cshtml
@@ -30,9 +30,13 @@
     <script type="text/javascript" src="@Href("/app/controllers/reservation.controller.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/addUser.controller.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/roomInfo.controller.js")"></script>
+    <script type="text/javascript" src="@Href("/app/controllers/bills.controller.js")"></script>
+    <script type="text/javascript" src="@Href("/app/controllers/addBill.controller.js")"></script>
+    <script type="text/javascript" src="@Href("/app/controllers/reservation.controller.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/floor.controller.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/makeReservation.controller.js")"></script>
     <script type="text/javascript" src="@Href("/app/controllers/roomInfoForPeriod.controller.js")"></script>
+    <script type="text/javascript" src="@Href("/app/controllers/updateStatus.controller.js")"></script>
 
     <script type="text/javascript" src="@Href("/app/filters/filters.js")"></script>
     <script type="text/javascript" src="@Href("/app/services/admin.service.js")"></script>
