--- a/BoardingHouse/Views/_LayoutPage.cshtml
+++ b/BoardingHouse/Views/_LayoutPage.cshtml
@@ -9,13 +9,13 @@
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/css/styles.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-image:url('/image/background.jpg')">
     <div ng-app="mainModule">
         <div ng-controller="mainController">
             @RenderBody()
         </div>
     </div>
-
+   
     <script src="~/scripts/angular.min.js"></script>
     <script src="~/scripts/angular-route.min.js"></script>
 
