--- a/BoardingHouse/Content/css/styles.css
+++ b/BoardingHouse/Content/css/styles.css
@@ -246,9 +246,9 @@ td, th{
 }
 .card.hovercard .card-info .card-title {
     padding:0 5px;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 1;
-    color: #262626;
+    color: white;
     background-color: rgba(255, 255, 255, 0.1);
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
