--- a/BoardingHouse/Views/Admin/Index.cshtml
+++ b/BoardingHouse/Views/Admin/Index.cshtml
@@ -17,6 +17,7 @@
                 <li><a ui-sref="users"><i class="fa fa-users" aria-hidden="true"></i> Корисници</a></li>
                 <li><a ui-sref="floors"><i class="fa fa-bed" aria-hidden="true"></i> Преглед на спратови</a></li>
                 <li><a ui-sref="reservation"><i class="fa fa-bed" aria-hidden="true"></i> Резервации</a></li>
+                <li><a ui-sref="bills"><i class="fa fa-money" aria-hidden="true"></i> Сметки</a></li>
             </ul>
         </div>
         <div id="page-content-wrapper">
