--- a/BoardingHouse/Views/Home/Index.cshtml
+++ b/BoardingHouse/Views/Home/Index.cshtml
@@ -4,21 +4,34 @@
     Layout = "~/Views/_LayoutPage.cshtml";
 }
 
-<div class="col-lg-6 col-lg-offset-3">
-    <form name="loginForm">
-        <div class="form-group">
-            <label for="email">Е-маил адреса</label>
-            <input type="email" class="form-control" name="Email" id="email" placeholder="Е-маил адреса" ng-model="user.Email" required  ng-class="{ 'has-error' : loginForm.Email.$invalid &&  !loginForm.Email.$pristine }">
-        </div>
-        <div class="form-group">
-            <label for="password">Лозинка</label>
-            <input type="password" class="form-control" name="Password" id="password" placeholder="Лозинка" ng-model="user.Password" required  ng-class="{ 'has-error' : loginForm.Password.$invalid &&  !loginForm.Password.$pristine }">
-        </div>
+<div class="col-lg-4 col-lg-offset-4" style="margin-top:80px;">
+    <div class="panel panel-default">
+        <div class="panel-heading text-center" style="padding:0px;"><img src="~/image/hat.png" style="height:80px;"/><p><b>Boarding School</b></p></div>
+        <div class="panel-body">
+            <form name="loginForm">
+                <div class="form-group">
+                    <label for="email">Е-маил адреса</label>
+                    <input type="email" class="form-control" name="Email" id="email" placeholder="Е-маил адреса" ng-model="user.Email" required ng-class="{ 'has-error' : loginForm.Email.$invalid &&  !loginForm.Email.$pristine }">
+                </div>
+                <div class="form-group">
+                    <label for="password">Лозинка</label>
+                    <input type="password" class="form-control" name="Password" id="password" placeholder="Лозинка" ng-model="user.Password" required ng-class="{ 'has-error' : loginForm.Password.$invalid &&  !loginForm.Password.$pristine }">
+                </div>
 
-        <button class="btn btn-default" ng-click="login(loginForm)">Најави се</button>
-    </form>
-    <div class="clearfix"></div>
-    <div class="alert alert-danger" ng-if="!!msg" style="margin-top: 5px;">
-        <strong>{{msg}}</strong>
-    </div>
+                <div class="col-lg-12 text-right">
+                <button class="btn btn-success " ng-click="login(loginForm)">Најави се</button>
+                </div>
+            </form>
+            <div class="clearfix"></div>
+            <div class="alert alert-danger" ng-if="!!msg" style="margin-top: 5px;">
+                <strong>{{msg}}</strong>
+            </div>
+        </div>
+        <div class="panel-footer text-center">
+          <p>Дипломски труд</p>
+            <p>© Copyright 2016, Александра Новкова </p>
+
+        </div>
+    </div>   
+   
 </div>
